# SymbolicComputation

./: .gitignore  HowToDoStuff.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/symboliccomputation/: __init__.py
src/symboliccomputation/indeterminate/: __init__.py  indeterminate.py
src/symboliccomputation/number/: __init__.py  real.py
src/symboliccomputation/polynomial/: __init__.py  polynomial.py
tests/: test_polynomial.py  test_real.py
